This addresses issue #220 and #223 (#239)
* This addresses issue #220 and #223

* Removes the black outline on click and Closes #210

* This addresses the following issues:

- It takes away the white background shown when link is focused. Notable 
in the course catalog. Closes #217

- Darken the background in the login page by 35% to make the white text 
easier to read, and it adds margin to the top logo so it doesn't look 
like it's budding up against the top of the browser. Closes #214

* Fixes missing border in assessment text input box. Closes #240

--- a/scss/saylor/_button.scss
+++ b/scss/saylor/_button.scss
@@ -24,6 +24,10 @@
     color: $white;
 }
 
+.btn-primary:focus, .btn-primary.focus {
+  outline: inherit;
+}
+
 
 /*
 // Reset the default styling back to the bootstrap defaults for
