--- a/scss/saylor/_navigation.scss
+++ b/scss/saylor/_navigation.scss
@@ -38,7 +38,7 @@
 
 #navbar-login {
  box-shadow: 0 0;
- margin-bottom: 1rem;
+ margin: 1rem 0;
 }
 
 .navbar .btn {
